ADD buttons, resources and logic for both

--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     
+    <div class="container">
+
+        <div class="resources">
+            <p>Wood:</p> <p id="woodCount">0</p>
+            <p>Plank:</p> <p id="plankCount">0</p>
+            <p>Gold:</p> <p id="goldCount">0</p>
+        </div>
+
+<div class="buttonContainer">
+    <div><button id="chopWood">Chop Wood</button><button id="sellWoodBtn">Sell Wood</button></div>
+    <div><button id="craftPlank">Craft Plank</button><button id="sellPlanksBtn">Sell Planks</button></div>
+</div>
+
+
+
+
+
+    </div>
+
+<div id="footer">Copyright © The Gamahiro Project</div>
 </body>
 </html>
