ADD villager income, house

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
     <div class="container">
 
         <div class="resources">
-            <p>Wood:</p> <p id="woodCount">0</p>
+            <p>Wood:</p><div> <p id="woodCount">0</p><p id="gainAmount"></p></div>
             <p>Plank:</p> <p id="plankCount">0</p>
             <p>Gold:</p> <p id="goldCount">0</p>
+            <p>Houses:</p> <p id="houseCount">1</p>
+            <p>Villagers:</p> <p id="villagerCount">0</p>
         </div>
 
 <div class="buttonContainer">
     <div><button id="chopWood">Chop Wood</button><button id="sellWoodBtn">Sell Wood</button></div>
     <div><button id="craftPlank">Craft Plank</button><button id="sellPlanksBtn">Sell Planks</button></div>
+    <div><button id="buildHouse">Build House</button><button id="recruitVillager">Recruit Villager</button></div>
 </div>
 
 
