--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Wood Choper Game</title>
     <link rel="icon" href="assets/G-Logo.jpg">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script type="text/javascript" src="./factory/factory.js" defer></script>
+    <script type="text/javascript" src="script2.js" defer></script>
+    
 </head>
 
 <body>
