add webpack html, css & img loader

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wood Choper Game</title>
-    <link rel="icon" href="assets/G-Logo.jpg">
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="./factory/factory.js" defer></script>
-    <script type="text/javascript" src="script2.js" defer></script>
-    
+    <title>Wood Chopper Game</title>
 </head>
 
 <body>
